fix: broken footer height on ie 11
Occured on small screens

--- a/resources/scss/components/_footer.scss
+++ b/resources/scss/components/_footer.scss
@@ -77,6 +77,7 @@ Footer
 
 @media (max-width: $media-small) {
 	.footer .container {
+		display: block;
 		flex-direction: column;
 		text-align: center;
 	}
